--- a/boostrap_proj_01/03_Explore_Section_Area/01_start/index.html
+++ b/boostrap_proj_01/03_Explore_Section_Area/01_start/index.html
@@ -99,6 +99,70 @@
     </div>
   </header>
 
+  <!-- EXPLORE HEAD -->
+  <section id="explore-head-section">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center py-5">
+          <h1 class="display-4">Explore</h1>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur autem deleniti doloremque eaque, iure iusto quaerat voluptatum. Illo, quos?</p>
+          <a href="" class="btn btn-outline-secondary">Find Out More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- EXPLORE SECTION -->
+  <section id="explore-section" class="bg-light text-muted py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+        </div>
+        <div class="col-md-6">
+          <h3>Explore & Connect</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda eum ex inventore ipsa minima minus quam reiciendis tenetur totam voluptatem?</p>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <div class="i fa fa-check fa-2x"></div>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. A culpa dolorum explicabo molestias nihil tempora?
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <div class="i fa fa-check fa-2x"></div>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. A culpa dolorum explicabo molestias nihil tempora?
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <div class="i fa fa-check fa-2x"></div>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. A culpa dolorum explicabo molestias nihil tempora?
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer id="main-footer" class="bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center py-4">
+          <h3>LoopLAB</h3>
+          <p>Copright &copy; <span id="year"></span></p>
+          <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal"> Contact Us</button>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
