--- a/boostrap_proj_01/01_Setup_Navbar/01_start/index.html
+++ b/boostrap_proj_01/01_Setup_Navbar/01_start/index.html
@@ -10,7 +10,30 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="home">
-  <!-- START HERE -->  
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">LoopLAB</a>
+      <button class="navbar-toggler" data-toggle="collaps" data-target="navbarCollapse">
+        <span class="navbar-toggle-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#home-head-section" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#explore-head-section" class="nav-link">Explore</a>
+          </li>
+          <li class="nav-item">
+            <a href="#create-head-section" class="nav-link">Create</a>
+          </li>
+          <li class="nav-item">
+            <a href="#share-head-section" class="nav-link">Share</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
